--- a/frontend/src/app/components/company-pages/goods/goods.component.css
+++ b/frontend/src/app/components/company-pages/goods/goods.component.css
@@ -163,3 +163,14 @@
     background-color: lightgray;
     padding-left: 1em;
 }
+
+.image-container {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+}
