--- a/frontend/src/app/components/company-pages/goods/goods.component.css
+++ b/frontend/src/app/components/company-pages/goods/goods.component.css
@@ -174,3 +174,24 @@
     width: 100%;
     height: 100%;
 }
+
+.details {
+    margin: 3rem;
+}
+
+.details-header {
+    display: flex;
+    align-items: center;
+    color: black;
+}
+
+.details-table-element {
+    color: black;
+    padding: 1em 3em;
+}
+
+.details-back-button {
+    padding: .5em 1em;
+    background-color: gray;
+    color: white;
+}
