Fixed categories local storage

--- a/frontend/src/app/components/company-pages/categories/categories.component.html
+++ b/frontend/src/app/components/company-pages/categories/categories.component.html
@@ -2,7 +2,9 @@
 
 <div class="content">
     <ul>
-        <li *ngFor="let category of categories">{{ category }}</li>
+        <li *ngFor="let category of categories">
+            <h2>{{ category }}</h2>
+        </li>
     </ul>
     
     <div class="input-container">
