--- a/frontend/src/app/components/company-pages/add-product/add-product.component.css
+++ b/frontend/src/app/components/company-pages/add-product/add-product.component.css
@@ -1,5 +1,6 @@
 .content {
     color: black;
+    margin: .5em;
 }
 
 .image-container {
@@ -18,4 +19,10 @@ button {
     color: white;
     border-radius: 3px;
     cursor: pointer;
+}
+
+input {
+    padding: 0.5em;
+    border-radius: 3px;
+    margin: .5em 0;
 }
