--- a/frontend/src/app/components/customer/customer.component.html
+++ b/frontend/src/app/components/customer/customer.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
     <ul>
         <a routerLink="companies-products" (click)="selectPage('companies-products')" [ngClass]="{'navbar-selected': selectedPage === 'companies-products'}">
-            <li>Preduzeća u artikli</li>
+            <li>Preduzeća i artikli</li>
         </a>
         <a routerLink="account" (click)="selectPage('account')" [ngClass]="{'navbar-selected': selectedPage === 'account'}">
             <li>Pregled računa</li>
