--- a/frontend/src/app/components/company-pages/buyers-list/buyers-list.component.html
+++ b/frontend/src/app/components/company-pages/buyers-list/buyers-list.component.html
@@ -1,1 +1,12 @@
-<p>buyers-list works!</p>
+<div class="content">
+    <ul *ngFor="let buyer of allBuyers" class="company-list">
+        <li class="list-element">
+            <div class="image-container list-element-label">
+                <img src="{{ buyer.logo }}" alt="">
+            </div>
+            <label class="list-element-label">{{buyer.name}}</label>
+            <label class="list-element-label">PIB: {{buyer.pib}}</label>
+            <label class="list-element-label">MB: {{buyer.mb}}</label>
+        </li>
+    </ul>
+</div>
