--- a/frontend/src/app/components/company-pages/receipts/receipts.component.css
+++ b/frontend/src/app/components/company-pages/receipts/receipts.component.css
@@ -51,6 +51,10 @@ img {
     display: flex;
 }
 
+.table-element {
+    padding-right: 1em;
+}
+
 @media (max-width: 1000px) {
     .products-receipt-container {
         flex-direction: column;
