--- a/frontend/src/app/components/company-pages/receipts/receipts.component.html
+++ b/frontend/src/app/components/company-pages/receipts/receipts.component.html
@@ -5,43 +5,43 @@
             <div class="type-inner-wrapper">
                 <label>
                     <span>Magacin</span>
-                    <input type="radio" value="warehouse" [(ngModel)]="selectedType">
+                    <input type="radio" value="warehouse" [(ngModel)]="currentFacility.type">
                 </label>
             </div>
             <div class="type-inner-wrapper">
                 <label>
                     <span>Prodavnica</span>
-                    <input type="radio" value="shop" [(ngModel)]="selectedType">
+                    <input type="radio" value="shop" [(ngModel)]="currentFacility.type">
                 </label>
             </div>
         </div>
 
-        <div class="content-row heading" *ngIf="selectedType">Izaberite lokal</div>
+        <div class="content-row heading" *ngIf="currentFacility.type">Izaberite lokal</div>
 
-        <select class="content-row" *ngIf="selectedType === 'warehouse'" [(ngModel)]="selectedWarehouse">
+        <select class="content-row" *ngIf="currentFacility.type === 'warehouse'" [(ngModel)]="currentFacility.name">
             <option *ngFor="let warehouse of company.warehouses">
                 {{ warehouse.warehouseName }}
             </option>
         </select>
 
-        <select class="content-row" *ngIf="selectedType === 'shop'" [(ngModel)]="selectedCashRegister">
+        <select class="content-row" *ngIf="currentFacility.type === 'shop'" [(ngModel)]="currentFacility.name">
             <option *ngFor="let cashRegister of company.cashRegisters">
                 {{ cashRegister.cashRegisterLocation }}
             </option>
         </select>
 
         <div class="button-container">
-            <button class="pretty-button" *ngIf="selectedType" (click)="confirmFacility()">Potvrdi</button>
+            <button class="pretty-button" *ngIf="currentFacility.type" (click)="confirmFacility()">Potvrdi</button>
         </div>
 
         <div style="color: red">{{ message }}</div>
     </ng-container>
 
     <ng-container *ngIf="confirmedFacility">
-        <h2 *ngIf="selectedType === 'warehouse'">Magacin: {{ selectedWarehouse }}</h2>
-        <h2 *ngIf="selectedType === 'shop'">Prodavnica: {{ selectedCashRegister }}</h2>
+        <h2 *ngIf="currentFacility.type === 'warehouse'">Magacin: {{ currentFacility.name }}</h2>
+        <h2 *ngIf="currentFacility.type === 'shop'">Prodavnica: {{ currentFacility.name }}</h2>
         <div class="button-container">
-            <button class="pretty-button" *ngIf="selectedType" (click)="backToSelect()">Nazad</button>
+            <button class="pretty-button" (click)="backToSelect()">Nazad</button>
         </div>
         <div class="products-receipt-container">
             <table>
@@ -51,6 +51,7 @@
                     <th class="table-element">Naziv artikla</th>
                     <th class="table-element">Jedinica mere</th>
                     <th class="table-element">Stopa poreza</th>
+                    <th class="table-element">Cena</th>
                     <th></th>
                 </tr>
                 <tr *ngFor="let product of filteredProducts">
@@ -63,6 +64,7 @@
                     <td class="table-element">{{ product.name }}</td>
                     <td class="table-element">{{ product.unit }}</td>
                     <td class="table-element">{{ product.tax }}%</td>
+                    <td class="table-element">{{ product.facilities[getIndex(product)].priceSell }}din</td>
                     <td class="table-element">
                         <button class="pretty-button">Dodaj</button>
                     </td>
