--- a/frontend/src/app/components/company-pages/receipts-store/receipts-store.component.html
+++ b/frontend/src/app/components/company-pages/receipts-store/receipts-store.component.html
@@ -1,4 +1,7 @@
 <div class="content">
+
+    <div style="color: red">{{ messageQuantity }}</div>
+
     <ng-container *ngIf="!confirmedFacility">
         <div class="content-row heading">Izaberite tip lokala</div>
         <div class="type-outer-wrapper content-row">
@@ -74,8 +77,47 @@
                 </tr>
             </table>
 
-            <div class="receipt-container flex-item">
-
+            <div class="receipt-container flex-item" *ngIf="currentReceipt.items.length > 0">
+                <h2>Račun: {{ currentReceipt.companyName }} - {{ currentReceipt.facility.name }}</h2>
+                <table>
+                    <tr>
+                        <th class="table-element">
+                            Stavka
+                        </th>
+                        <th class="table-element">
+                            Jedinica
+                        </th>
+                        <th class="table-element">
+                            Cena bez PDV
+                        </th>
+                        <th class="table-element">
+                            Cena sa PDV
+                        </th>
+                        <th class="table-element">
+                            Količina
+                        </th>
+                    </tr>
+                    <tr *ngFor="let item of currentReceipt.items">
+                        <td class="table-element">
+                            {{ item.name }}
+                        </td>
+                        <td class="table-element">
+                            {{ item.unit }}
+                        </td>
+                        <td class="table-element">
+                            {{ item.priceNoTax }}
+                        </td>
+                        <td class="table-element">
+                            {{ item.priceTax }}
+                        </td>
+                        <td class="table-element">
+                            {{ item.quantity }}.00
+                        </td>
+                    </tr>
+                </table>
+                <h4>Cena bez PDV: {{ currentReceipt.totalPriceNoTax }}</h4>
+                <h4>Cena sa PDV: {{ currentReceipt.totalPriceTax }}</h4>
+                <div>Datum: {{ printDate(currentReceipt.date) }}</div>
             </div>
 
         </div>
