--- a/frontend/src/app/components/company-pages/receipt-pay-store/receipt-pay-store.component.css
+++ b/frontend/src/app/components/company-pages/receipt-pay-store/receipt-pay-store.component.css
@@ -1,6 +1,12 @@
 .content {
     color: black;
     margin: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-item {
+    margin-bottom: 1em;
 }
 
 
@@ -14,4 +20,23 @@
 
 .receipt-container h4 {
     margin: .5em 0;
+}
+
+.pretty-input {
+    padding: .5em;
+    border-radius: 3px;
+}
+
+.pretty-button {
+    cursor: pointer;
+    padding: .5em;
+    border-radius: 3px;
+    color: white;
+    background-color: gray;
+    margin: .5em 0;
+}
+
+td {
+    padding-right: .5em;
+    padding-bottom: .5em;
 }
