Receipts page almost finished

--- a/frontend/src/app/components/company-pages/receipt-pay-store/receipt-pay-store.component.html
+++ b/frontend/src/app/components/company-pages/receipt-pay-store/receipt-pay-store.component.html
@@ -89,7 +89,7 @@
                         <input class="pretty-input" type="text" placeholder="Unesite prezime kupca" [(ngModel)]="customerLastname">
                     </td>
                     <td>
-                        <input class="pretty-input" type="text" placeholder="Unesite broj lk kupca" [(ngModel)]="customerLastname" [(ngModel)]="customerId">
+                        <input class="pretty-input" type="text" placeholder="Unesite broj lk kupca" [(ngModel)]="customerId">
                     </td>
                 </tr>
                 <tr>
